# IoTNetwork

./: CMakeLists.txt
app/: main.cpp  map.cpp  run.cpp  test.cpp  test.json
data/: config.json  test.json
src/SmartNetwork/: Capabilities.cpp  Capabilities.hpp  Commands.cpp  Commands.hpp  DeviceCapabilities.cpp  DeviceCapabilities.hpp  DeviceConnection.cpp  DeviceConnection.hpp  DeviceData.cpp  DeviceData.hpp  DeviceMap.cpp  DeviceMap.hpp  DeviceRelations.cpp  DeviceRelations.hpp  Relations.cpp  Relations.hpp  ServerCommands.cpp  ServerCommands.hpp  ServerConnection.cpp  ServerConnection.hpp  WebsocketServer.cpp  WebsocketServer.hpp  Websockets.hpp
